# slackdump2html

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Pipfile  README.md  ROADMAP.md  SECURITY.md  SUPPORT.md  audit-export-features.sh  download-all-channels.sh  dump-and-convert.sh  export-channels.sh  export-emojis.sh  export-users.sh  install-slackdump.sh  pyproject.toml  setup.py
.github/: dependabot.yml  pull_request_template.md  release.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  question.yml
.github/workflows/: ci.yml  codeql.yml  release.yml
scripts/: audit_export_features.py  lib.sh
src/slackdump2html/: HtmlPrinter.py  SlackDataCleaner.py  SlackDumpReader.py  __main__.py  cli.py  command_line.py  data_structures.py
src/slackdump2html/styles/: style.css
tests/: test_SlackDumpReader.py  test_cleaner_reader_helpers.py  test_cli_and_wrappers.py  test_html_printer_helpers.py  test_slack_dump_reader.py
tests/test_data/: C2R198BRC.json
