[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[project]
name = "slackdump2html"
version = "0.1.0"
description = "Convert slackdump JSON exports into searchable standalone HTML"
readme = "README.md"
requires-python = ">=3.13"
license = { file = "LICENSE.md" }
authors = [
  { name = "slackdump2html contributors" }
]
keywords = ["slack", "export", "html", "archive", "knowledge-base"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Intended Audience :: System Administrators",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.13",
  "Topic :: Communications :: Chat",
  "Topic :: Text Processing :: Markup :: HTML",
]
dependencies = [
  "emoji>=2.12.1",
]

[project.urls]
Homepage = "https://github.com/patbaumgartner/slackdump2html"
Repository = "https://github.com/patbaumgartner/slackdump2html"
Issues = "https://github.com/patbaumgartner/slackdump2html/issues"
Changelog = "https://github.com/patbaumgartner/slackdump2html/releases"

[project.scripts]
slackdump2html = "slackdump2html.cli:main"

[dependency-groups]
dev = [
  "bandit>=1.8.0",
  "mypy>=1.11.2",
  "pip-audit>=2.8.0",
  "pre-commit>=4.0.1",
  "pytest>=8.3.2",
  "pytest-cov>=5.0.0",
  "ruff>=0.6.2",
]

[tool.hatch.build.targets.wheel]
packages = ["src/slackdump2html"]

[tool.pytest.ini_options]
addopts = "-q --cov=slackdump2html --cov-report=term-missing --cov-fail-under=90"
testpaths = ["tests"]

[tool.ruff]
target-version = "py313"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = []

[tool.mypy]
python_version = "3.13"
files = ["src", "tests"]
warn_unused_configs = true
check_untyped_defs = true
ignore_missing_imports = true

[tool.bandit]
exclude_dirs = ["tests"]
targets = ["src"]
